--- a/UI Design/nbproject/project.properties
+++ b/UI Design/nbproject/project.properties
@@ -28,10 +28,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/UI_Design.jar
+dist.jar=${dist.dir}/FileManagementSystem.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/UI_Design
+dist.jlink.output=${dist.jlink.dir}/FileManagementSystem
 excludes=
 includes=**
 jar.compress=false
@@ -70,8 +70,8 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=UI_Design
-main.class=ui.design.UIDesign
+jlink.launcher.name=FileManagementSystem
+main.class=UI_Pages.UIDesign
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
