--- a/UI Design/nbproject/project.properties
+++ b/UI Design/nbproject/project.properties
@@ -35,7 +35,7 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/FileManagementSystem
 endorsed.classpath=
 excludes=
-file.reference.mysql-connector-j-8.0.31.jar=C:\\Users\\Windows\\Desktop\\mysql-connector-j-8.0.31\\mysql-connector-j-8.0.31.jar
+file.reference.mysql-connector-j-8.0.31.jar=C:\\Users\\Windows\\Desktop\\jdbc connector\\mysql-connector-j-8.0.31.jar
 includes=**
 jar.compress=false
 javac.classpath=\
