--- a/UI Design/nbproject/project.properties
+++ b/UI Design/nbproject/project.properties
@@ -36,10 +36,12 @@ dist.jlink.output=${dist.jlink.dir}/FileManagementSystem
 endorsed.classpath=
 excludes=
 file.reference.mysql-connector-j-8.0.31.jar=C:\\Users\\Windows\\Desktop\\jdbc connector\\mysql-connector-j-8.0.31.jar
+file.reference.rs2xml.jar=C:\\Users\\Windows\\Desktop\\rs2xml.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-j-8.0.31.jar}
+    ${file.reference.mysql-connector-j-8.0.31.jar}:\
+    ${file.reference.rs2xml.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -75,7 +77,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=FileManagementSystem
-main.class=UI_Pages.UIDesign
+main.class=UI_Pages.mainPage
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
