Enable logout button for admin

--- a/UI Design/nbproject/project.properties
+++ b/UI Design/nbproject/project.properties
@@ -35,13 +35,11 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/FileManagementSystem
 endorsed.classpath=
 excludes=
-file.reference.mysql-connector-j-8.0.31.jar=C:\\Users\\Windows\\Desktop\\jdbc connector\\mysql-connector-j-8.0.31.jar
-file.reference.rs2xml.jar=C:\\Users\\Windows\\Desktop\\rs2xml.jar
+file.reference.mysql-connector-j-8.0.31.jar=C:\\Users\\Windows\\Documents\\programs\\connectorJ\\mysql-connector-j-8.0.31.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-j-8.0.31.jar}:\
-    ${file.reference.rs2xml.jar}
+    ${file.reference.mysql-connector-j-8.0.31.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -81,6 +79,7 @@ main.class=UI_Pages.mainPage
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
+no.dependencies=true
 platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
